ENH: Adding segmentation by registration CLI app (squash)
Adding code based on ITK example DeformableRegistration15
CompositeTransform works, but not satisfactorily
Using Distance Field of whole bone segmentation for rigid and affine registration
Add batch script to run segmentation by registration on all cases
Mask is not needed for distance field registration, but for CT intensities
Do not use masks, zero-out the part of the image outside the mask
Set bone image's intensities to -1k far from the bone
Distance field outside the bone
More granular time reporting
Disable intensity threshold for sampling
Set appropriate translation scale based on average image spacing
Do only one level of BSpline registration
Resampling using both affine and BSpline transforms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,9 @@ find_package(ITK 5 REQUIRED
     ITKRegionGrowing
     ITKImageGrid
     ITKLabelMap
+    ITKRegistrationCommon
+    ITKIOTransformInsightLegacy
+    ITKSpatialObjects
     BoneEnhancement
     ITKIOMeta
     ITKIONRRD
@@ -28,13 +31,17 @@ find_package(ITK 5 REQUIRED
 include(${ITK_USE_FILE})
 
 add_executable(segmentBonesInMicroCT segmentBonesInMicroCT.cxx)
+add_executable(registerAndTransferLabels registerAndTransferLabels.cxx)
 
 target_link_libraries(segmentBonesInMicroCT ${ITK_LIBRARIES})
+target_link_libraries(registerAndTransferLabels ${ITK_LIBRARIES})
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT segmentBonesInMicroCT)
 
 set(INSTALL_RUNTIME_DESTINATION bin CACHE STRING "Install destination")
 
 install(
-  TARGETS segmentBonesInMicroCT
+  TARGETS
+    segmentBonesInMicroCT
+    registerAndTransferLabels
   DESTINATION ${INSTALL_RUNTIME_DESTINATION}
   )
