--- a/Jupyter/requirements.txt
+++ b/Jupyter/requirements.txt
@@ -1,4 +1,12 @@
-jupyterlab>=2.0.1
-ipywidgets==7.5.1
-itkwidgets>=0.26.1
 itk-elastix>=0.5.1
+itk==5.1rc1.post1
+itk-core==5.1rc1.post1
+itk-numerics==5.1rc1.post1
+itk-filtering==5.1rc1.post1
+itk-registration==5.1rc1.post1
+itk-segmentation==5.1rc1.post1
+itkwidgets>=0.26.1
+jupyterlab==1.2.5
+imageio
+ipywidgets>=7.5.1
+ipympl>=0.4.1
