ENH: supporting H5 transform files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(ITK 5 REQUIRED
     ITKLabelMap
     ITKRegistrationCommon
     ITKIOTransformInsightLegacy
+    ITKIOTransformHDF5
     ITKSpatialObjects
     BoneEnhancement
     ITKIOMeta
