ENH: second filter placeholder

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,14 +1,19 @@
 itk_module_test()
 
 set(HASITests
-  itkMinimalStandardRandomVariateGeneratorTest.cxx
+  itkLandmarkAtlasSegmentationFilterTest.cxx
   itkSegmentBonesInMicroCTFilterTest.cxx
   )
 
 CreateTestDriver(HASI "${HASI-Test_LIBRARIES}" "${HASITests}")
 
-itk_add_test(NAME itkMinimalStandardRandomVariateGeneratorTest
-  COMMAND HASITestDriver itkMinimalStandardRandomVariateGeneratorTest
+itk_add_test(NAME itkLandmarkAtlasSegmentationFilterTest
+  COMMAND HASITestDriver
+    --compare
+    ${ITK_TEST_OUTPUT_DIR}/itkLandmarkAtlasSegmentationFilterTestOutput.mha
+    DATA{Baseline/itkLandmarkAtlasSegmentationFilterTestOutput.mha}
+  itkLandmarkAtlasSegmentationFilterTest
+    ${ITK_TEST_OUTPUT_DIR}/itkLandmarkAtlasSegmentationFilterTestOutput.mha
   )
 
 itk_add_test(NAME itkSegmentBonesInMicroCTFilterTest
