--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,8 +20,16 @@ itk_add_test(NAME itkSegment901LTest
 itk_add_test(NAME itkLandmarkAtlasSegmentationFilterTest
   COMMAND HASITestDriver
     --compare
-    DATA{Baseline/itkLandmarkAtlasSegmentationFilterTestOutput.mha}
-    ${ITK_TEST_OUTPUT_DIR}/itkLandmarkAtlasSegmentationFilterTestOutput.mha
+    DATA{Baseline/907-L-A.nrrd}
+    ${ITK_TEST_OUTPUT_DIR}/907-L-A.nrrd
   itkLandmarkAtlasSegmentationFilterTest
-    ${ITK_TEST_OUTPUT_DIR}/itkLandmarkAtlasSegmentationFilterTestOutput.mha
+    DATA{Input/901-L.nrrd}
+    DATA{Input/907-L.nrrd}
+    ${ITK_TEST_OUTPUT_DIR}/901-L-label.nrrd
+    DATA{Input/907-L-atlas.nrrd}
+    DATA{Input/901-L.fcsv}
+    DATA{Input/907-L.fcsv}
+    ${ITK_TEST_OUTPUT_DIR}/907-L-
   )
+set_tests_properties(itkLandmarkAtlasSegmentationFilterTest
+    PROPERTIES DEPENDS itkSegment901LTest)
