BUG: Disable itkLandmarkAtlasSegmentationFilterTest
Currently failing per Issue #10

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,19 +17,19 @@ itk_add_test(NAME itkSegment901LTest
     ${ITK_TEST_OUTPUT_DIR}/901-L-label.nrrd
   )
 
-itk_add_test(NAME itkLandmarkAtlasSegmentationFilterTest
-  COMMAND HASITestDriver
-    --compare
-    DATA{Baseline/901-L-A.nrrd}
-    ${ITK_TEST_OUTPUT_DIR}/901-L-A.nrrd
-  itkLandmarkAtlasSegmentationFilterTest
-    DATA{Input/901-L.nrrd}
-    DATA{Input/907-L.nrrd}
-    ${ITK_TEST_OUTPUT_DIR}/901-L-label.nrrd
-    DATA{Input/907-L-atlas.nrrd}
-    DATA{Input/901-L.fcsv}
-    DATA{Input/907-L.fcsv}
-    ${ITK_TEST_OUTPUT_DIR}/901-L-
-  )
-set_tests_properties(itkLandmarkAtlasSegmentationFilterTest
-    PROPERTIES DEPENDS itkSegment901LTest)
+#itk_add_test(NAME itkLandmarkAtlasSegmentationFilterTest
+  #COMMAND HASITestDriver
+    #--compare
+    #DATA{Baseline/901-L-A.nrrd}
+    #${ITK_TEST_OUTPUT_DIR}/901-L-A.nrrd
+  #itkLandmarkAtlasSegmentationFilterTest
+    #DATA{Input/901-L.nrrd}
+    #DATA{Input/907-L.nrrd}
+    #${ITK_TEST_OUTPUT_DIR}/901-L-label.nrrd
+    #DATA{Input/907-L-atlas.nrrd}
+    #DATA{Input/901-L.fcsv}
+    #DATA{Input/907-L.fcsv}
+    #${ITK_TEST_OUTPUT_DIR}/901-L-
+  #)
+#set_tests_properties(itkLandmarkAtlasSegmentationFilterTest
+    #PROPERTIES DEPENDS itkSegment901LTest)
