BUG: fix Mac directory

--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -224,7 +224,7 @@ jobs:
         ./macpython-download-cache-and-build-module-wheels.sh
         popd
         cp ITKBoneEnhancement/include/* include/
-        /Users/Kitware/Dashboards/ITK/ITKPythonPackage/scripts/macpython-build-module-wheels.sh
+        ./ITKPythonPackage/scripts/macpython-build-module-wheels.sh
 
     - name: Publish Python package as GitHub Artifact
       uses: actions/upload-artifact@v1
