--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -144,6 +144,36 @@ jobs:
         ctest --output-on-failure -j 2 -V -S dashboard.cmake
       shell: cmd
 
+  build-test-python:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      max-parallel: 3
+      matrix:
+        os: [ubuntu-18.04, windows-2019, macos-10.15]
+        include:
+          - os: ubuntu-18.04
+          - os: windows-2019
+          - os: macos-10.15
+
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+
+    - name: Install build dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install ninja
+        python -m pip install itk==5.2rc2
+        python -m pip install pytest
+
+    - name: Test with pytest
+      run: |
+        pytest 'test'
+
   build-linux-python-packages:
     runs-on: ubuntu-18.04
     strategy:
