WIP: Update hasi python module CI and dependencies

--- a/src/hasi/pyproject.toml
+++ b/src/hasi/pyproject.toml
@@ -7,5 +7,29 @@ module = "hasi"
 author = "Kitware Medical"
 author-email = "matt.mccormick@kitware.com"
 home-page = "https://github.com/KitwareMedical/HASI"
-classifiers = ["License :: OSI Approved :: Apache Software License"]
+requires = [
+    "itk-hasi",
+]
+requires-python=">=3.7"
+classifiers = [
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: C++",
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Education",
+    "Intended Audience :: Healthcare Industry",
+    "Intended Audience :: Science/Research",
+    "Topic :: Scientific/Engineering",
+    "Topic :: Scientific/Engineering :: Medical Science Apps.",
+    "Topic :: Scientific/Engineering :: Information Analysis",
+    "Topic :: Software Development :: Libraries",
+    "Operating System :: Microsoft :: Windows",
+    "Operating System :: Unix",
+    "Operating System :: MacOS"
+]
 
+[tool.flit.metadata.requires-extra]
+test = [
+    "pytest >=6.2.1"
+]
