--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -144,7 +144,7 @@ jobs:
         ctest --output-on-failure -j 2 -V -S dashboard.cmake
       shell: cmd
 
-  build-test-python:
+  test-python-hasi-package:
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 3
@@ -157,6 +157,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+
+    - name: Move to hasi module directory
+      run: |
+        cd src/hasi
 
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
@@ -172,7 +176,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest 'test'
+        pytest .
 
   build-linux-python-packages:
     runs-on: ubuntu-18.04
