--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -16,26 +16,26 @@ jobs:
           - os: ubuntu-18.04
             c-compiler: "gcc"
             cxx-compiler: "g++"
-            itk-git-tag: "60c2920599013d20293432902cb9d775eb87d0b2"
+            itk-git-tag: "v5.2.0"
             cmake-build-type: "MinSizeRel"
           - os: windows-2019
             c-compiler: "cl.exe"
             cxx-compiler: "cl.exe"
-            itk-git-tag: "60c2920599013d20293432902cb9d775eb87d0b2"
+            itk-git-tag: "v5.2.0"
             cmake-build-type: "Release"
           - os: macos-10.15
             c-compiler: "clang"
             cxx-compiler: "clang++"
-            itk-git-tag: "60c2920599013d20293432902cb9d775eb87d0b2"
+            itk-git-tag: "v5.2.0"
             cmake-build-type: "MinSizeRel"
 
     steps:
     - uses: actions/checkout@v1
 
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.8
 
     - name: Install build dependencies
       run: |
@@ -169,13 +169,13 @@ jobs:
         pytest .
 
   build-linux-python-packages:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     strategy:
       max-parallel: 2
       matrix:
         python-version: [36, 37, 38, 39]
         include:
-          - itk-python-git-tag: "v5.2rc03"
+          - itk-python-git-tag: "v5.2.0"
 
     steps:
     - uses: actions/checkout@v2
@@ -222,7 +222,7 @@ jobs:
       max-parallel: 2
       matrix:
         include:
-          - itk-python-git-tag: "v5.2rc03"
+          - itk-python-git-tag: "v5.2.0"
 
     steps:
     - uses: actions/checkout@v2
