--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -161,7 +161,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install ninja
-        python -m pip install itk==5.2rc2
+        python -m pip install itk==5.2.0
         python -m pip install pytest
 
     - name: Test with pytest
