--- a/.github/workflows/test-python-hasi.yml
+++ b/.github/workflows/test-python-hasi.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install ninja
         python -m pip install itk==5.2.0
+        python -m pip install itk-shape==0.2.0
         python -m pip install pytest
 
     - name: Test with pytest
