--- a/.github/workflows/build-test-package.yml
+++ b/.github/workflows/build-test-package.yml
@@ -3,7 +3,7 @@ name: Build, test, package
 on: [push,pull_request]
 
 env:
-  ITKBoneEnhancement-git-tag: v0.4.1
+  ITKBoneEnhancement-git-tag: v0.4.2
 
 jobs:
   build-test-cxx:
@@ -141,7 +141,7 @@ jobs:
       matrix:
         python-version: [36, 37, 38, 39]
         include:
-          - itk-python-git-tag: "v5.2.0"
+          - itk-python-git-tag: "v5.2.0.post2"
 
     steps:
     - uses: actions/checkout@v2
@@ -186,7 +186,7 @@ jobs:
       max-parallel: 2
       matrix:
         include:
-          - itk-python-git-tag: "v5.2.0"
+          - itk-python-git-tag: "v5.2.0.post2"
 
     steps:
     - uses: actions/checkout@v2
@@ -230,7 +230,7 @@ jobs:
       matrix:
         python-version-minor: [6, 7, 8, 9]
         include:
-          - itk-python-git-tag: "v5.2.0"
+          - itk-python-git-tag: "v5.2.0.post2"
 
     steps:
     - name: Get specific version of CMake, Ninja
