--- a/.github/workflows/test-python-hasi.yml
+++ b/.github/workflows/test-python-hasi.yml
@@ -2,9 +2,6 @@ name: Test Python HASI
 
 on: [push,pull_request]
 
-env:
-  ITKBoneEnhancement-git-tag: v0.4.1
-
 jobs:
   test-python-hasi-package:
     runs-on: ${{ matrix.os }}
@@ -28,8 +25,9 @@ jobs:
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install itk==5.2.0
-        python -m pip install itk-shape==0.2.0
+        python -m pip install itk==5.2.0.post2
+        python -m pip install itk-shape==0.2.1
+        python -m pip install dwd==1.0.1
         python -m pip install pytest
 
     - name: Test with pytest
