BUG: Add seaborn and matplotlib package dependencies

--- a/src/hasi/pyproject.toml
+++ b/src/hasi/pyproject.toml
@@ -10,7 +10,9 @@ home-page = "https://github.com/KitwareMedical/HASI"
 requires = [
     "itk-hasi>=0.2.2",
     "itk-shape>=0.2.1",
-    "dwd>=1.0.1"
+    "dwd>=1.0.1",
+    "seaborn",
+    "matplotlib"
 ]
 requires-python=">=3.7"
 classifiers = [
