--- a/src/hasi/pyproject.toml
+++ b/src/hasi/pyproject.toml
@@ -36,5 +36,8 @@ classifiers = [
 [tool.flit.metadata.requires-extra]
 test = [
     "pytest >=6.2.1",
-    "pytest-dependency>=0.5.1"
+    "pytest-dependency>=0.5.1",
+    "ipfsspec",
+    "xarray",
+    "zarr"
 ]
