--- a/.github/workflows/test-python-hasi.yml
+++ b/.github/workflows/test-python-hasi.yml
@@ -22,6 +22,11 @@ jobs:
       with:
         python-version: 3.7
 
+    - name: Setup ipfs
+      uses: ibnesayeed/setup-ipfs@master
+      with:
+        ipfs_version: ^0.8
+
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
