STYLE: rename examples project
This removes ambiguity whether we are looking at
the main project or the examples project
when opened in an IDE such as Visual Studio.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,7 +10,7 @@ if(NOT CMAKE_CXX_EXTENSIONS)
   set(CMAKE_CXX_EXTENSIONS OFF)
 endif()
 
-project(HASI CXX) # High-throughput Application for Skeletal Imaging
+project(HASI_Examples CXX) # High-throughput Application for Skeletal Imaging
 
 find_package(ITK 5 REQUIRED
   COMPONENTS
