--- a/www/package.json
+++ b/www/package.json
@@ -17,6 +17,8 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
+    "@lit-labs/router": "^0.1.1",
+    "@material/web": "0.1.0-alpha.0",
     "lit": "^2.4.0"
   },
   "devDependencies": {
