COMP: build as website

--- a/www/package.json
+++ b/www/package.json
@@ -3,17 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "dist/my-element.es.js",
-  "exports": {
-    ".": "./dist/my-element.es.js"
-  },
-  "types": "types/my-element.d.ts",
-  "files": [
-    "dist",
-    "types"
-  ],
   "scripts": {
     "dev": "vite",
+    "preview": "vite preview",
     "build": "tsc && vite build"
   },
   "dependencies": {
