--- a/www/package.json
+++ b/www/package.json
@@ -9,6 +9,7 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
+    "@lit-labs/context": "^0.1.3",
     "@lit-labs/router": "^0.1.1",
     "@lumino/datagrid": "^0.36.5",
     "@lumino/default-theme": "^0.22.5",
@@ -16,7 +17,8 @@
     "@lumino/widgets": "^1.35.0",
     "@material/web": "npm:material-web-hasi@0.1.0-alpha.0",
     "lit": "^2.4.0",
-    "urlpattern-polyfill": "^6.0.2"
+    "urlpattern-polyfill": "^6.0.2",
+    "xstate": "^4.34.0"
   },
   "devDependencies": {
     "typescript": "^4.6.4",
