--- a/.github/workflows/test-python-hasi.yml
+++ b/.github/workflows/test-python-hasi.yml
@@ -11,19 +11,19 @@ jobs:
     strategy:
       max-parallel: 3
       matrix:
-        os: [ubuntu-18.04, windows-2019, macos-10.15]
+        os: [ubuntu-22.04, windows-2022, macos-10.15]
         include:
-          - os: ubuntu-18.04
-          - os: windows-2019
+          - os: ubuntu-22.04
+          - os: windows-2022
           - os: macos-10.15
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
 
-    - name: Set up Python 3.7
+    - name: Set up Python 3.11
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.11
 
     - name: Setup ipfs
       uses: ibnesayeed/setup-ipfs@master
@@ -37,9 +37,9 @@ jobs:
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install itk==5.2.0.post2
-        python -m pip install itk-shape==0.2.1
-        python -m pip install dwd==1.0.1
+        python -m pip install itk==5.4.0
+        python -m pip install itk-shape==0.4.0
+        python -m pip install dwd==1.0.5
         python -m pip install seaborn
         python -m pip install matplotlib
         python -m pip install pytest
