--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "itk-hasi"
-version = "0.4.0"
+version = "0.4.1"
 description = "High-throughput Applications for Skeletal Imaging"
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -12,7 +12,7 @@ authors = [
     { name = "Kitware Medical", email = "itk+community@discourse.itk.org" },
 ]
 keywords = [
-    "ITK",
+    "itk",
     "InsightToolkit",
 ]
 classifiers = [
@@ -34,7 +34,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Medical Science Apps.",
     "Topic :: Software Development :: Libraries",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
     "itk == 5.4.*",
     "itk-boneenhancement",
@@ -42,14 +42,14 @@ dependencies = [
 ]
 
 [project.urls]
-Download = "https://itk.org/"
-Homepage = "https://itk.org/"
+Download = "https://github.com/KitwareMedical/HASI"
+Homepage = "https://github.com/KitwareMedical/HASI"
 
 [tool.scikit-build]
 # The versions of CMake to allow. If CMake is not present on the system or does
 # not pass this specifier, it will be downloaded via PyPI if possible. An empty
 # string will disable this check.
-cmake.version = ">=3.16.3"
+cmake.version = ">=3.22.1"
 
 # A list of args to pass to CMake when configuring the project. Setting this in
 # config or envvar will override toml. See also ``cmake.define``.
